retrieve (1)/src/objects/Questionaire__c.object
<CustomObject>
    <fields>
        <fullName>Multi_Select__c</fullName>
        <formula>IF((Solution1__c !=null &amp;&amp; Solution2__c == null &amp;&amp; Solution3__c == null),FALSE,TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multi-Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiselect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiselect?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Option1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Option1</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>Questionaires (Option1)</relationshipLabel>
        <relationshipName>Questionaires3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Option2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Option2</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>Questionaires (Option2)</relationshipLabel>
        <relationshipName>Questionaires4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Option3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Option3</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>Questionaires (Option3)</relationshipLabel>
        <relationshipName>Questionaires5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution 1</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>Questionaires</relationshipLabel>
        <relationshipName>Questionaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution 2</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>Questionaires (Solution 2)</relationshipLabel>
        <relationshipName>Questionaires1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution 3</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>Questionaires (Solution 3)</relationshipLabel>
        <relationshipName>Questionaires2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ADM 201</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEV 401</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Cloud</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Questionaire</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Questionaire Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Option1_cannot_be_same_as_other_options</fullName>
        <active>true</active>
        <errorConditionFormula>(Option1__c !=null) &amp;&amp; (Option1__c == Option2__c || Option1__c == Option3__c || Option1__c == Option4__c)</errorConditionFormula>
        <errorDisplayField>Option1__c</errorDisplayField>
        <errorMessage>Options cannot be similar!!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Option2_cannot_be_similar</fullName>
        <active>true</active>
        <errorConditionFormula>(Option2__c != null) &amp;&amp; (Option2__c == Option1__c || Option2__c == Option3__c || Option2__c == Option4__c)</errorConditionFormula>
        <errorDisplayField>Option2__c</errorDisplayField>
        <errorMessage>Options cannot be similar!!!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Option3_cannot_be_similar</fullName>
        <active>true</active>
        <errorConditionFormula>(Option3__c !=null) &amp;&amp; (Option3__c == Option1__c || Option3__c == Option2__c || Option3__c == Option4__c)</errorConditionFormula>
        <errorDisplayField>Option3__c</errorDisplayField>
        <errorMessage>Options cannot be similar</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Option4_cannot_be_similar</fullName>
        <active>true</active>
        <errorConditionFormula>(Option4__c != null) &amp;&amp; (Option4__c == Option1__c || Option4__c == Option2__c || Option4__c == Option3__c)</errorConditionFormula>
        <errorDisplayField>Option4__c</errorDisplayField>
        <errorMessage>Options cannot be similar</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Solution1_cannot_be_similar</fullName>
        <active>true</active>
        <errorConditionFormula>(Solution1__c !=null) &amp;&amp; (Solution1__c == Solution2__c || Solution1__c ==Solution3__c )</errorConditionFormula>
        <errorDisplayField>Solution1__c</errorDisplayField>
        <errorMessage>Solutions cannot be similar to each other!!!!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Solution1_should_match_Options</fullName>
        <active>false</active>
        <errorConditionFormula>(Solution1__c!=null) &amp;&amp; (Solution1__c!=Option1__c || Solution1__c !=Option2__c || Solution1__c!=Option3__c || Solution1__c != Option4__c)</errorConditionFormula>
        <errorMessage>Solution 1 should match any of the options</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Solution2_cannot_be_similar</fullName>
        <active>true</active>
        <errorConditionFormula>(Solution2__c !=null) &amp;&amp; (Solution2__c == Solution1__c || Solution2__c ==Solution3__c )</errorConditionFormula>
        <errorDisplayField>Solution2__c</errorDisplayField>
        <errorMessage>Solutions cannot be similar to each other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Solution_2_should_match_the_options</fullName>
        <active>false</active>
        <errorConditionFormula>(Solution2__c!=null) &amp;&amp; (Solution2__c != Option1__c || Solution2__c != Option2__c || Solution2__c != Option3__c || Solution2__c != Option4__c)</errorConditionFormula>
        <errorMessage>Solution 2 should match any of the options</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Solution_3_cannot_be_similar</fullName>
        <active>true</active>
        <errorConditionFormula>(Solution3__c !=null) &amp;&amp; (Solution3__c == Solution1__c || Solution3__c ==Solution2__c )</errorConditionFormula>
        <errorDisplayField>Solution3__c</errorDisplayField>
        <errorMessage>Solutions cannot be similar to each other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Solution_3_should_match_any_options</fullName>
        <active>false</active>
        <errorConditionFormula>(Solution3__c!=null) &amp;&amp; (Solution3__c != Option1__c || Solution3__c != Option2__c || Solution3__c != Option3__c || Solution3__c != Option4__c)</errorConditionFormula>
        <errorMessage>Solution 3 should match any one of the options.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Solutions_should_match_options</fullName>
        <active>false</active>
        <errorConditionFormula>((Solution1__c != Option1__c) &amp;&amp; (Solution1__c != Option2__c) &amp;&amp; (Solution1__c != Option3__c) &amp;&amp; (Solution1__c != Option4__c)) || ((Solution2__c != Option1__c) &amp;&amp; (Solution2__c != Option2__c) &amp;&amp; (Solution2__c != Option3__c) &amp;&amp; (Solution2__c != Option4__c)) || ((Solution3__c != Option1__c) &amp;&amp; (Solution3__c != Option2__c) &amp;&amp; (Solution3__c != Option3__c) &amp;&amp; (Solution3__c != Option4__c))</errorConditionFormula>
        <errorMessage>Solutions should match the options provided!</errorMessage>
    </validationRules>
</CustomObject>